<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NavigationDrawer.ServiceLocations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#fff"
    android:transitionName="transition_signup" >

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:transitionName="logo_image"
        android:src="@drawable/locations"/>

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome"
        android:padding="10dp"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:transitionName="logo_name"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/freeLocatons"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:transitionName="logo_desc"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kalyanpur"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gurudev Palace"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vikas Nagar, CNG"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SuryaVihar"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ChidiyaGhar,Azad Nagar"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nawabganj"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mainawati Marg/NRI City"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Company Bagh Chauraha"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="RawatPur"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Geeta Nagar"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VinayakPur"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swaroop Nagar"
            android:layout_margin="3dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/card2"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/paidLocatons"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gyanLocatons"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:includeFontPadding="false"
        android:fontFamily="@font/bungee"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Don't Hesitate \nThis is our work"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:includeFontPadding="false"
        android:fontFamily="@font/bungee"
        android:textSize="20sp"/>

   <com.google.android.material.button.MaterialButton
       android:id="@+id/tnc"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text = "@string/tnc"
       android:drawableEnd="@drawable/terms_alt_24"
       android:layout_marginTop="10dp"
       android:textAllCaps="false"
       android:onClick="goto_tnc"
       android:layout_gravity="center_horizontal"
       android:textColor="@color/black"
       android:transitionName="button_tran"
       android:background="#00000000"/>

</LinearLayout>